[tool.poetry]
name = "meal-api"
version = "0.1.0"
description = ""
authors = ["Maksim Kozhin <a.zurnaaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
fake-headers = "^1.0.2"
lxml = "^5.2.2"
tqdm = "^4.66.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
